--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/tenzies.png" />
-    <link rel="icon" href="tenzies.png" type="image/x-icon">
-    <link rel="apple-touch-icon" href="tenzies.png" type="image/x-icon">
+    <link rel="icon" href="/tenzies.png" type="image/x-icon">
+    <link rel="apple-touch-icon" href="/tenzies.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
